--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -167,19 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "query = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "prcp_query = session.query(Measurement.date, Measurement.prcp).\\\n",
     "    filter(Measurement.date >= date_oneyear_ago).\\\n",
     "    order_by(Measurement.date).all()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "2016-08-23           0.02"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,9 +253,9 @@
    "source": [
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "# Sort the dataframe by date\n",
-    "query_df = pd.DataFrame(query, columns=['Date','Precipitation'])\n",
-    "query_df.set_index('Date', inplace=True)\n",
-    "query_df.head()"
+    "prcp_query_df = pd.DataFrame(query, columns=['Date','Precipitation'])\n",
+    "prcp_query_df.set_index('Date', inplace=True)\n",
+    "prcp_query_df.head()"
    ]
   },
   {
